# OxideOS

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build_iso.sh  build_iso64.sh  build_kernel.sh  debugging.md  install.sh  install_dep.sh  linker.ld  linker64.ld  mac_setup.md  x86_32-oxideos.json  x86_64-oxideos.json
.cargo/: config.toml  config64.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: 03_memory_management.md  04_syscalls_and_usermode.md  OxideOS_Technical_Documentation.md  adding_grub.md  boot.md  build_and_run_qemu_linux.md  build_and_run_qemu_mac.md  build_iso_with_grub_mac.md  build_kernel.sh  debugging.md  dev_workflow.md  disk_and_filesystem.md  filesystem.md  installation.md  interrupts.md  memory.md  pic.md  plan.md  scheduler.md  todo.md
kernel/: Cargo.toml  Makefile  build.rs  rust-toolchain.toml
kernel/src/: boot_init.rs  gui_loop.rs  main.rs  net_probe.rs  panic.rs  sysinfo.rs  version.rs  wallpaper.rs
kernel/src/gui/: calendar.rs  colors.rs  fonts.rs  graphics.rs  launcher.rs  menu.rs  mod.rs  mouse.rs  notepad.rs  notifications.rs  overview.rs  oxide_backend.rs  quick_settings.rs  start_menu.rs  terminal.rs  text_editor.rs  widgets.rs  window_manager.rs
kernel/src/kernel/: 01_boot_process.md  02_interrupts_and_cpu.md  05_graphics_and_gui.md  06_storage_stack.md  README.md  allocator.rs  ata.rs  compositor.rs  elf_loader.rs  env.rs  ext2.rs  fat.rs  gdt.rs  gui_proc.rs  idt.rs  installer.rs  interrupts.rs  ipc.rs  keyboard.rs  loggers.rs  mod.rs  paging_allocator.rs  pipe.rs  procfs.rs  programs.rs  scheduler.rs  serial.rs  shm.rs  shutdown.rs  stdin.rs  syscall.rs  syscall_core.rs  syscall_handler.rs  tty.rs  user_mode.rs  vfs.rs
kernel/src/kernel/arch/: interrupts.rs  mod.rs
kernel/src/kernel/drivers/: ata.rs  disk_store.rs  keyboard.rs  mod.rs  pic.rs  rtc.rs
kernel/src/kernel/drivers/net/: dns.rs  e1000.rs  mod.rs  pci.rs  pcnet.rs  stack.rs
kernel/src/kernel/fs/: diskfs.rs  ext2.rs  fat.rs  mbr.rs  mod.rs  procfs.rs  ramfs.rs  vfs.rs
kernel/src/kernel/gui/: compositor.rs  gui_proc.rs  mod.rs
kernel/src/kernel/ipc/: mod.rs  pipe.rs  shm.rs
kernel/src/kernel/mem/: mod.rs  paging_allocator.rs
kernel/src/kernel/net/: e1000.rs  mod.rs  rtl8139.rs  socket.rs  stack.rs
kernel/src/kernel/proc/: elf_loader.rs  env.rs  mod.rs  programs.rs  scheduler.rs  user_mode.rs
kernel/src/kernel/sys/: mod.rs  syscall.rs  syscall_core.rs  syscall_handler.rs
kernel/tests/: syscall_core.rs
src/: main.rs  main_bkp.rs  multiboot.rs  multiboot2_parser.rs  multiboot64.rs  panic.rs
src_old/: main.rs  panic.rs  (+3 more)
userspace/coreutils/: Cargo.toml
userspace/coreutils/src/: cat.rs  cp.rs  echo.rs  false_.rs  forktest.rs  grep.rs  head.rs  kill.rs  ls.rs  mkdir.rs  mv.rs  ps.rs  pwd.rs  rm.rs  sleep.rs  sort.rs  tail.rs  touch.rs  true_.rs  wc.rs
(+125 files in other folders)
