[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[features]
user_syscalls = []

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.5"
pc-keyboard = { version = "0.7", default-features = false }
smoltcp = { version = "0.11", default-features = false, features = [
    "proto-ipv4", "proto-dhcpv4",
    "socket-tcp", "socket-udp", "socket-icmp", "socket-dhcpv4",
    "medium-ethernet",
    "alloc",
] }

[build-dependencies]
png = "0.17"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
