[package]
name = "coreutils"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "ps"
path = "src/ps.rs"

[[bin]]
name = "cp"
path = "src/cp.rs"

[[bin]]
name = "mkdir"
path = "src/mkdir.rs"

[[bin]]
name = "pwd"
path = "src/pwd.rs"

[[bin]]
name = "rm"
path = "src/rm.rs"

[[bin]]
name = "mv"
path = "src/mv.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "grep"
path = "src/grep.rs"

[[bin]]
name = "wc"
path = "src/wc.rs"

[[bin]]
name = "head"
path = "src/head.rs"

[[bin]]
name = "tail"
path = "src/tail.rs"

[[bin]]
name = "sort"
path = "src/sort.rs"

[[bin]]
name = "sleep"
path = "src/sleep.rs"

[[bin]]
name = "kill"
path = "src/kill.rs"

[[bin]]
name = "touch"
path = "src/touch.rs"

[[bin]]
name = "true"
path = "src/true_.rs"

[[bin]]
name = "false"
path = "src/false_.rs"

[dependencies]
oxide-rt = { path = "../oxide-rt" }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[profile.dev]
panic = "abort"
